# Base-Central-de-Datos-Personales

./: .gitignore  README.md  index.html  pyproject.toml  script.js  styles.css
app/: config.py  crud.py  database.py  main.py  models.py
app/routers/: persons.py  profiles.py  records.py
app/static/: app.js  styles.css
app/templates/: index.html
webapp_secure/: Dockerfile  README.md  database.db  main.py  requirements.txt
webapp_secure/static/: style.css
webapp_secure/templates/: index.html  login.html
