[tool.poetry]
name = "base-central-datos-personales"
version = "0.1.0"
description = "API para centralizar datos personales, médicos y profesionales en una base de datos unificada"
authors = ["OpenAI Assistant <assistant@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlmodel = "^0.0.16"
python-multipart = "^0.0.9"

[tool.poetry.group.dev.dependencies]
httpx = "^0.27.0"
pytest = "^8.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
